# deepiri-huddle

./: .env.example  .gitignore  README.md  pyproject.toml
.github/codeql/: README.md  codeql-config.yml
huddle/: __init__.py  chat_agent.py  cli.py  config.py  discord_feed.py  docfinder.py  gitlog.py  llm.py  logging_setup.py  memory.py  models.py  plan_output.py  planner.py  risks.py  schedule.py  tui.py
huddle/templates/: plan.md.j2
tests/: test_gitlog.py  test_memory.py  test_plan_output.py  test_planner.py  test_risks.py
