[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "deepiri-huddle"
version = "0.2.0"
description = "Deepiri AI meeting planner with artifact-driven plans, git-aware context, and heuristic fallback."
authors = ["Deepiri Team <team@deepiri.ai>"]
readme = "README.md"
packages = [{ include = "huddle" }]

[tool.poetry.dependencies]
python = "^3.11"
typer = ">=0.12.0"
rich = ">=13.7.0"
pydantic = ">=2.7.0"
pydantic-settings = ">=2.2.0"
httpx = ">=0.27.0"
textual = ">=0.68.0"
jinja2 = ">=3.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
ruff = "^0.4.0"

[tool.poetry.scripts]
huddle = "huddle.cli:app"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-q"
testpaths = ["tests"]
